--- a/sites/all/themes/auge-theme/sass/partials/_placeholders.scss
+++ b/sites/all/themes/auge-theme/sass/partials/_placeholders.scss
@@ -24,7 +24,6 @@
 
 // Auge button shape
 %button {
-  display: inline-block;
   font-size: 1.6rem;
   padding-bottom: 30px;
   color: $orange;
